--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -47,9 +47,27 @@
 .header {
   margin-left: 90px;
   margin-right: 90px;
+
+  @media (max-width:992px) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  
+  @media (max-width:776px) {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
  
 h1 {
-  margin-left: 150px;
+  margin-left: 150px; 
+  @media (max-width:776px) {
+    margin-left: 10px;
+   
+  }
+  @media (max-width:992px) {
+    margin-left: 20px;
+    
+  }
 }
   
 
