--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,27 +16,54 @@ $search-icon-hover-color: #ddd;
   column-gap: 10px;
   margin-left: 150px;
   margin-right: 150px;
+  @media (max-width : 992px) {
+    margin-left: 10px;
+    margin-right: 10px;
+    grid-template-columns: 1fr 1fr  ;
+    grid-template-rows:auto  ;
+  
+   }
+   @media (max-width : 576px) {
+    margin-left: 5px;
+    margin-right: 5px;
+    grid-template-columns: auto  ;
+  
+  
+   }
+   @media (max-width : 768px) {
+    margin-left: 10px;
+    margin-right: 10px;
+    grid-template-columns: 1fr  ;
+  
+  
+   }
 
 }
 
 // styling for within the deal items 
 .grid-deals{
-  height: fit-content;
- margin-bottom: 40px;
+  height: max-content;
+  width: min-content;
+  margin-bottom: 40px;
   display: grid;
-  grid-template-rows: auto ;
+  grid-template-rows: 3fr 2fr 1fr 1fr ;
+  grid-template-columns: 1fr 1fr 1fr;
   background-color: rgba(255, 255, 255, 1);
-  row-gap: 0px;
+  row-gap: 10px;
+  column-gap: 10px;
  padding: 10px;
  border-radius: 10px;
+ text-align: center;
+
 
   .grid-item2{
     .time{
       color: blue;
       background-color: rgba(198, 189, 189, 0.5); 
-      padding: 10px 6px; 
+      padding: 10px 10px; 
       margin-top: 10px;
       border-radius: 10px;
+     
     }
   }
 
@@ -45,7 +72,7 @@ $search-icon-hover-color: #ddd;
   }
 
   @media (max-width: 992px) {
-    grid-template-rows:  auto; 
+    grid-template-rows: auto; 
   }
 
 
@@ -56,13 +83,7 @@ $search-icon-hover-color: #ddd;
       margin-right: 20px; 
     }
     
-    .grid-item1,
-    .grid-item2,
-    .grid-item3,
-    .grid-item4 {
-      grid-column: auto; 
-      grid-row: auto; 
-    }
+ 
   }
 
   @media (max-width: 576px) {
@@ -76,11 +97,11 @@ $search-icon-hover-color: #ddd;
     background-color: rgba(27, 136, 244, 1);
     border-radius: 8px;
     padding : 10px;
-    width: 120px;
+    width: 150px;
     margin-left: 12%;
     margin-top: 8%;
     transition: background-color 0.3s ease;
-
+ 
   }
 
   button:hover {
@@ -130,6 +151,12 @@ img {
   
    h2{
     margin-left: 150px;
+    @media (max-width : 576px) {
+      margin-left: 5px;
+      
+    
+     }
+  
    }
   html,
   body {
@@ -206,139 +233,175 @@ img {
   height: fit-content;
 
   @media(max-width:992px){
-   height: auto;
-   width: auto;
+   height: fit-content;
+   width: fit-content;
   }
 }
 
 
 //Card
-
 .grid-container {
-
   display: grid;
   width: fit-content;
   border-radius: 8px;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 10fr);
+  grid-template-rows: repeat(2, 10fr);
   background-color: rgba(255, 255, 255, 1);
+  gap: 10px;
+  margin: 20px auto;
+  padding: 10px;
   margin-left: 150px;
   margin-right: 150px;
-  gap: 10px;
-  margin-top: 20px;
-  padding: 10px;
-  row-gap: 3px;
 
-  @media (max-width: 1200px) {
-    grid-template-columns:  3fr repeat(5, 1fr); 
+}
+
+@media (max-width: 1200px) {
+  .grid-container {
+    grid-template-columns: 3fr repeat(4, 1fr);
   }
+}
 
-  @media (max-width: 992px) {
-    grid-template-columns: auto; 
-    margin-right: 100px;
+@media (max-width: 992px) {
+  .grid-container {
+    grid-template-columns: auto;
+    margin-left: 150px;
+    margin-right: 150px;
   }
+}
 
+@media (max-width: 768px) {
+  .grid-container {
+    grid-template-columns: 1fr;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+}
+
+@media (max-width: 576px) {
+  .grid-container {
+    grid-template-columns: auto;
+    grid-template-rows: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+
+  }
+}
+
+.grid-item1,
+.grid-item2
+ {
+  grid-row-start: 1;
+  grid-row: span 1;
+  grid-column-start: 1;
+  grid-column: span 1;
 
   @media (max-width: 768px) {
-    .grid-container {
-      grid-template-columns: auto;
-      grid-template-rows: repeat(2, 1fr); 
-      margin-left: 20px; 
-      margin-right: 20px; 
-    }
-    
-    .grid-item1,
-    .grid-item2,
-    .grid-item3,
-    .grid-item4,
-    .grid-item5,
-    .grid-item6 {
-      grid-column: auto; 
-      grid-row: auto; 
-    }
-  }
-
-  @media (max-width: 576px) {
-    grid-template-columns:  auto; 
-    grid-template-rows: 4;
-    margin-left: 20px; 
-    margin-right: 20px;
-  }
-
-
-
-  .grid-item1{
-    grid-column: 1 / span 1;
-    grid-row: 1 ;
-
    
-  }
-  .grid-item2{
-    grid-column: 1 / span 1;
-    grid-row: 2 ;
     
-  }
-  .grid-item3{
-    grid-column:  2 / span 2;
-    grid-row: 2 ;
-  }
-  .grid-item4{
-    grid-column:  2 / span 2;
-    grid-row: 3;
-
-    .show-more{
-      margin-top: 8%;
-      color: rgba(27, 136, 244, 1);
-      
+    grid-row: auto;
+    grid-column: auto;
     }
+  
+  
+  @media (max-width: 576px) {
+    
+    grid-row: auto;
+    grid-column: auto;
+  
+  
 
-    ul {
-      list-style: none;
-      padding: 0;
-      
-    }
-    .firstList {
-
-      ul{
-      background-color:rgba(255, 244, 237, 1);
-      padding: 10px; 
-      border-radius: 10px; 
-      
-    }
-
-    }
-    .highlight {
-      color: blue;
-      background-color: rgba(255, 255, 255, 0.5); 
-      padding: 10px 6px; 
-      line-height: 30px;
-     
-  }
 }
-  .grid-item5{
-    grid-column : 5 /span 1 ;
-    grid-row : 2 ;
-  }
-  .grid-item6{
-    grid-column: 5/span 1 ;
-    grid-row: 3;
-  }
+ }
+.grid-item5,
+.grid-item6 {
+  grid-column-start: 5;
 
-  .primary{
-    background-color: rgba(27, 136, 244, 1);
-    border-radius: 8px;
-    padding : 10px;
-    width: 120px;
-    margin-left: 12%;
-    transition: background-color 0.3s ease;
+  @media (max-width: 768px) {
+   
+    
+    grid-row: auto;
+    grid-column: auto;
+    }
+  
+  
+  @media (max-width: 576px) {
+    
+    grid-row: auto;
+    grid-column: auto;
+  
+  
 
-  }
-
-  button:hover {
-    background-color: #2980b9;
-    cursor: pointer;
-  }
+}
  
 }
+
+.grid-item3 {
+  grid-column: span 2;
+  grid-row: span 1;
+  @media (max-width: 768px) {
+   
+    
+    grid-row: auto;
+    grid-column: auto;
+    }
+  
+  
+  @media (max-width: 576px) {
+    
+    grid-row: auto;
+    grid-column: auto;
+  
+  
+
+}
+}
+
+.grid-item4 {
+  grid-column-start: 3;
+  grid-row-start: 2;
+  @media (max-width: 768px) {
+   
+    
+    grid-row: auto;
+    grid-column: auto;
+    }
+  
+  
+  @media (max-width: 576px) {
+    
+    grid-row: auto;
+    grid-column: auto;
+  
+  
+
+}
+ 
+}
+
+.show-more {
+  margin-top: 8%;
+  color: rgba(27, 136, 244, 1);
+}
+
+.primary {
+  background-color: rgba(27, 136, 244, 1);
+  border-radius: 8px;
+  padding: 10px;
+  width: 120px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  transition: background-color 0.3s ease;
+
+  
+}
+
+.primary:hover {
+  background-color: #2980b9;
+  cursor: pointer;
+
+}
+
 
 
 //newsletter
@@ -399,6 +462,10 @@ footer {
   margin-right: 90px;
   margin-left: 90px;
 
+  @media (max-width:992px) {
+    margin-right: 20px;
+    margin-left: 20px;
+  }
 
 h4 {
   margin-bottom: 10px;
